# tensorflow

tensorflow/core/example/: example.pb.h  example_parser_configuration.pb.cc  example_parser_configuration.pb.h  feature.pb.h
tensorflow/core/framework/: allocation_description.pb.h  api_def.pb.cc  api_def.pb.h  attr_value.pb.h  cost_graph.pb.h  device_attributes.pb.cc  device_attributes.pb.h  function.pb.cc  function.pb.h  graph.pb.h  graph_transfer_info.pb.cc  graph_transfer_info.pb.h  kernel_def.pb.cc  kernel_def.pb.h  log_memory.pb.cc  log_memory.pb.h  node_def.pb.h  op_def.pb.h  reader_base.pb.cc  reader_base.pb.h  remote_fused_graph_execute_info.pb.cc  remote_fused_graph_execute_info.pb.h  resource_handle.pb.h  resource_handle.pb_text.cc  step_stats.pb.h  summary.pb.cc  summary.pb.h  tensor.pb.h  tensor_description.pb.h  tensor_shape.pb.h  tensor_slice.pb.cc  tensor_slice.pb.h  types.pb.h  variable.pb.cc  variable.pb.h  versions.pb.h
tensorflow/core/grappler/costs/: op_performance_data.pb.cc  op_performance_data.pb.h
tensorflow/core/profiler/: op_profile.pb.cc  op_profile.pb.h  profile.pb.cc  profile.pb.h  profiler_analysis.pb.cc  profiler_analysis.pb.h  profiler_service.pb.cc  profiler_service.pb.h  profiler_service_monitor_result.pb.cc  profiler_service_monitor_result.pb.h  tfprof_log.pb.cc  tfprof_log.pb.h  tfprof_options.pb.cc  tfprof_options.pb.h  tfprof_output.pb.cc  tfprof_output.pb.h
tensorflow/core/profiler/protobuf/: hardware_types.pb.cc  hardware_types.pb.h  input_pipeline.pb.cc  input_pipeline.pb.h  op_metrics.pb.cc  op_metrics.pb.h  op_stats.pb.cc  op_stats.pb.h  steps_db.pb.cc  steps_db.pb.h  tf_stats.pb.cc  tf_stats.pb.h  xplane.pb.cc  xplane.pb.h
tensorflow/core/protobuf/: autotuning.pb.cc  autotuning.pb.h  bfc_memory_map.pb.cc  bfc_memory_map.pb.h  cluster.pb.h  config.pb.cc  config.pb.h  control_flow.pb.cc  control_flow.pb.h  conv_autotuning.pb.cc  conv_autotuning.pb.h  critical_section.pb.cc  critical_section.pb.h  debug.pb.h  debug_event.pb.cc  debug_event.pb.h  device_properties.pb.cc  device_properties.pb.h  eager_service.pb.cc  eager_service.pb.h  error_codes.pb.h  graph_debug_info.pb.cc  graph_debug_info.pb.h  master.pb.cc  master.pb.h  master_service.pb.cc  master_service.pb.h  meta_graph.pb.cc  meta_graph.pb.h  named_tensor.pb.h  queue_runner.pb.cc  queue_runner.pb.h  remote_tensor_handle.pb.cc  remote_tensor_handle.pb.h  replay_log.pb.cc  replay_log.pb.h  rewriter_config.pb.cc  rewriter_config.pb.h  saved_model.pb.cc  saved_model.pb.h  (+19 more)
tensorflow/core/util/: event.pb.cc  event.pb.h  example_proto_fast_parsing_test.pb.cc  example_proto_fast_parsing_test.pb.h  memmapped_file_system.pb.cc  memmapped_file_system.pb.h  saved_tensor_slice.pb.cc  saved_tensor_slice.pb.h  test_log.pb.cc  test_log.pb.h
tensorflow/lite/: CMakeLists.txt
tensorflow/lite/delegates/gpu/cl/: compiled_program_cache_generated.h
tensorflow/lite/delegates/gpu/gl/: common_generated.h  metadata_generated.h  workgroups_generated.h
tensorflow/lite/experimental/ruy/: pack_arm.h
tensorflow/lite/micro/: CMakeLists.txt
tensorflow/lite/micro/examples/hello_world/: CMakeLists.txt
tensorflow/lite/micro/examples/person_detection/: CMakeLists.txt
tensorflow/lite/micro/project/board_config/: linux64.cmake
tensorflow/lite/project/board_config/: android.cmake  arm64.cmake  linux64.cmake
tensorflow/lite/project/compile/: CMakeCache.txt  Makefile  build_android.sh  build_android_v7.sh  build_arm64.sh  build_x64.sh  cmake_install.cmake
tensorflow/lite/project/gtest/: CMakeLists.txt
tensorflow/lite/schema/: schema_generated.h
tensorflow/lite/toco/: CMakeLists.txt  model_flags.pb.cc  model_flags.pb.h  toco_cmdline_flags.cc  toco_flags.pb.cc  toco_flags.pb.h  types.pb.cc  types.pb.h
tensorflow/lite/toco/logging/: toco_conversion_log.pb.cc  toco_conversion_log.pb.h
tensorflow/lite/tools/versioning/: op_version.h
tensorflow/stream_executor/: dnn.pb.cc  dnn.pb.h
